now at least loading in real network data and displaying in d3

--- a/basic_test.html
+++ b/basic_test.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="basic_test.css">
 
     <!-- load D3js -->
-    <script src="http://www.d3plus.org/js/d3.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
  
     <!-- load jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   </head>
   <body>
