--- a/basic_test_click.html
+++ b/basic_test_click.html
@@ -16,6 +16,9 @@
     <!-- load jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
+    <!-- load d3 tooltips library -->
+    <script type='text/javascript' src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"> </script>
+
   </head>
   <body>
 
